--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cosmos-connect",
   "displayName": "Cosmos Connect",
   "description": "Connect to chains built on Cosmos-SDK",
+  "repository": "https://github.com/cosmy-wasmy/cosmos-connect",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.98.0"
@@ -14,8 +15,9 @@
   "contributes": {
     "commands": [
       {
-        "command": "cosmos-connect.helloWorld",
-        "title": "Hello World"
+        "command": "cosmos-connect.queryTx",
+        "title": "Query Tx",
+        "category": "Cosmos Connect"
       }
     ]
   },
@@ -30,20 +32,21 @@
     "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ."
   },
   "devDependencies": {
-    "@types/vscode": "^1.98.0",
-    "@types/mocha": "^10.0.10",
     "@types/assert": "^1.5.11",
-    "eslint": "^9.21.0",
+    "@types/mocha": "^10.0.10",
+    "@types/vscode": "^1.98.0",
+    "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
-    "mocha": "^11.1.0",
-    "typescript": "^5.7.3",
     "@vscode/test-web": "^0.0.67",
-    "ts-loader": "^9.5.2",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "@types/webpack-env": "^1.18.8",
+    "@vscode/vsce": "^3.2.2",
     "assert": "^2.1.0",
-    "process": "^0.11.10"
+    "eslint": "^9.21.0",
+    "mocha": "^11.1.0",
+    "process": "^0.11.10",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
