--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
         "command": "cosmos-connect.queryNodeInfo",
         "title": "Query Node Info",
         "category": "Cosmos Connect"
+      },
+      {
+        "command": "cosmos-connect.queryLatestBlock",
+        "title": "Query Latest Block",
+        "category": "Cosmos Connect"
       }
     ],
     "configuration": [
