--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
       ]
     },
     "views": {
-      "cosmos-connect":[
+      "cosmos-connect": [
         {
           "id": "blocks",
           "name": "Blocks",
@@ -129,7 +129,9 @@
     "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ."
   },
   "devDependencies": {
+    "@cosmjs/proto-signing": "^0.33.0",
     "@types/assert": "^1.5.11",
+    "@types/base64-js": "^1.3.2",
     "@types/mocha": "^10.0.10",
     "@types/vscode": "^1.98.0",
     "@types/webpack-env": "^1.18.8",
@@ -148,7 +150,11 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "base64-js": "^1.5.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "fetch": "^1.1.0",
+    "stream-browserify": "^3.0.0",
     "ws": "^8.18.1"
   }
 }
