--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
           "cosmos-connect.workspaceChain": {
             "type": "string",
             "scope": "resource",
-            "readOnly": true
+            "readOnly": true,
+            "description": "Chain to connect to"
           },
           "cosmos-connect.chains": {
             "type": "array",
@@ -118,6 +119,11 @@
                 "name": "Cosmos Hub",
                 "rest": "https://rest.lavenderfive.com:443/cosmoshub",
                 "websocket": "wss://rpc.lavenderfive.com/cosmoshub/websocket"
+              },
+              {
+                "name": "Localnet",
+                "rest": "http://localhost:1317",
+                "websocket": "ws://localhost:26657/websocket"
               }
             ]
           }
